# n-body

./: CMakeLists.txt  Makefile  README.md  main.cpp  nbody_cuda.cu
include/: ecs.h  integrate.h
include/common/: vec.h
src/: CMakeLists.txt  integrate.cu  main.cpp
